website/i18n/fr/docusaurus-plugin-content-docs/version-2.x/guides/docs/sidebar/index.mdx
---
slug: /sidebar
---

# Barre latérale

La création d'une barre latérale est utile pour :

- Grouper plusieurs **documents connexes**
- **Afficher une barre latérale** sur chacun de ces documents
- Fournir une **navigation paginée**, avec le bouton suivant/précédent

Pour utiliser les barres latérales sur votre site Docusaurus :

1. Définit un fichier qui exporte un dictionnaire d'[objets de la barre latérale](#sidebar-object).
2. Passez cet objet directement dans le plugin `@docusaurus/plugin-docs` ou via `@docusaurus/preset-classic`.

```js title="docusaurus.config.js"
module.exports = {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          sidebarPath: require.resolve('./sidebars.js'),
        },
      },
    ],
  ],
};
```

Cette section sert de vue d'ensemble des caractéristiques diverses de la barre latérale du doc. Dans les sections suivantes, nous introduirons plus systématiquement les concepts suivants :

```mdx-code-block
import DocCardList from '@theme/DocCardList';

<DocCardList />
```

## Barre latérale par défaut {#default-sidebar}

Si le `sidebarPath` n'est pas spécifié, Docusaurus [génère automatiquement une barre latérale](autogenerated.mdx) pour vous, en utilisant la structure du système de fichiers du dossier `docs` :

```js title="sidebars.js"
module.exports = {
  mySidebar: [
    {
      type: 'autogenerated',
      dirName: '.', // génère une barre latérale à partir du dossier docs (ou versioned_docs/<version>)
    },
  ],
};
```

Vous pouvez également définir vos barres latérales de manière explicite.

## Objet Sidebar {#sidebar-object}

Une barre latérale, c'est avant tout une hiérarchie de catégories, de liens vers des documents et d'autres hyperliens.

```ts
type Sidebar =
  // Syntaxe normale
  | SidebarItem[]
  // Syntaxe abrégée
  | {[categoryLabel: string]: SidebarItem[]};
```

Par exemple :

```js title="sidebars.js"
module.exports = {
  mySidebar: [
    {
      type: 'category',
      label: 'Pour commencer',
      items: [
        {
          type: 'doc',
          id: 'doc1',
        },
      ],
    },
    {
      type: 'category',
      label: 'Docusaurus',
      items: [
        {
          type: 'doc',
          id: 'doc2',
        },
        {
          type: 'doc',
          id: 'doc3',
        },
      ],
    },
    {
      type: 'link',
      label: 'En savoir plus',
      href: 'https://example.com',
    },
  ],
};
```

Ceci est un fichier de barres latérales qui exporte une barre latérale, appelée `mySidebar`. Il comporte trois éléments de premier niveau : deux catégories et un lien externe. Dans chaque catégorie, il y a quelques liens de doc.

Un fichier de barres latérales peut contenir [**des objets de barre latérale multiples**](multiple-sidebars.mdx), identifiés par leurs clés d'objet.

```ts
type SidebarsFile = {
  [sidebarID: string]: Sidebar;
};
```

## Configuration du thème {#theme-configuration}

### Barre latérale masquable {#hideable-sidebar}

En activant l'option `themeConfig.docs.sidebar.hideable` vous pouvez masquer l'ensemble de la barre latérale, permettant aux utilisateurs de mieux se concentrer sur le contenu. Ceci est particulièrement utile lors de la consommation de contenu sur des écrans à dimensions moyennes (par exemple, sur des tablettes).

```js title="docusaurus.config.js"
module.exports = {
  themeConfig: {
    // highlight-start
    docs: {
      sidebar: {
        hideable: true,
      },
    },
    // highlight-end
  },
};
```

### Réduire automatiquement les catégories de la barre latérale {#auto-collapse-sidebar-categories}

L'option `themeConfig.docs.sidebar.autoCollapseCategories` réduit toutes les catégories voisines lors du développement d'une catégorie. Cela évite à l'utilisateur d'avoir trop de catégories ouvertes et l'aide à se concentrer sur la section sélectionnée.

```js title="docusaurus.config.js"
module.exports = {
  themeConfig: {
    // highlight-start
    docs: {
      sidebar: {
        autoCollapseCategories: true,
      },
    },
    // highlight-end
  },
};
```

## Passage de props personnalisés {#passing-custom-props}

Pour transmettre des propriétés personnalisées à un élément de barre latérale, ajoutez l'objet facultatif `customProps` à l'un des éléments. Cela est utile pour appliquer des personnalisations de site en changeant les composants React qui rendent les éléments de la barre latérale.

```js
{
  type: 'doc',
  id: 'doc1',
  // highlight-start
  customProps: {
    badges: ['new', 'green'],
    featured: true,
  },
  // highlight-end
};
```

## Fil d'Ariane de la barre latérale {#sidebar-breadcrumbs}

Par défaut, le fil d'Ariane est affiché en haut, en utilisant le « chemin de la barre latérale » de la page courante.

Ce comportement peut être désactivé avec les options du plugin :

```js title="docusaurus.config.js"
module.exports = {
  presets: [
    [
      '@docusaurus/preset-classic',
      {
        docs: {
          // highlight-next-line
          breadcrumbs: false,
        },
      },
    ],
  ],
};
```

## Exemple de barres latérales complexes {#complex-sidebars-example}

Un exemple du monde réel du site Docusaurus :

```mdx-code-block
import CodeBlock from '@theme/CodeBlock';

<CodeBlock language="js" title="sidebars.js">
  {require('!!raw-loader!@site/sidebars.ts')
    .default
    .split('\n')
    // Supprime les commentaires
    .map((line) => !['//','/*','*'].some(commentPattern => line.trim().startsWith(commentPattern)) && line)
    .filter(Boolean)
    .join('\n')}
</CodeBlock>
```
